test_scores/negative_dimers/features/P56537.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P56537.pkl.xz